@@ -1,30 +1,28 @@
 package in.gov.abdm.nmr.service.impl;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import in.gov.abdm.nmr.client.DscFClient;
 import in.gov.abdm.nmr.dto.*;
 import in.gov.abdm.nmr.entity.*;
 import in.gov.abdm.nmr.enums.HpProfileStatus;
-import in.gov.abdm.nmr.exception.InvalidRequestException;
-import in.gov.abdm.nmr.exception.NmrException;
-import in.gov.abdm.nmr.exception.NoDataFoundException;
-import in.gov.abdm.nmr.exception.WorkFlowException;
+import in.gov.abdm.nmr.exception.*;
 import in.gov.abdm.nmr.mapper.IHpProfileMapper;
+import in.gov.abdm.nmr.nosql.entity.Council;
+import in.gov.abdm.nmr.nosql.repository.ICouncilRepository;
 import in.gov.abdm.nmr.repository.*;
+import in.gov.abdm.nmr.service.ICouncilService;
 import in.gov.abdm.nmr.service.IHpProfileDaoService;
 import in.gov.abdm.nmr.service.IRequestCounterService;
+import in.gov.abdm.nmr.service.IUserDaoService;
 import in.gov.abdm.nmr.util.NMRConstants;
 import in.gov.abdm.nmr.util.NMRUtil;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
-import javax.persistence.Tuple;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.sql.Timestamp;
@@ -32,7 +30,8 @@ import java.time.LocalDateTime;
 import java.util.*;
 
 import static in.gov.abdm.nmr.util.NMRConstants.*;
-import static in.gov.abdm.nmr.util.NMRUtil.*;
+import static in.gov.abdm.nmr.util.NMRUtil.coalesce;
+import static in.gov.abdm.nmr.util.NMRUtil.validateWorkProfileDetailsAndProofs;
 
 @Service
 @Slf4j
@@ -104,44 +103,48 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
     private IUserRepository iUserRepository;
 
     @Autowired
-    private ObjectMapper objectMapper;
-    @Autowired
     private ICollegeMasterRepository collegeMasterRepository;
     @Autowired
     private UniversityMasterRepository universityMasterRepository;
 
     @Autowired
+    private ICouncilRepository councilRepository;
+
+    @Autowired
+    private ICouncilService councilService;
+
+    @Autowired
+    private IStateMedicalCouncilRepository stateMedicalCouncilRepository;
+
+    @Autowired
+    private IUserDaoService userDetailService;
+
+    @Autowired
     private LanguagesKnownRepository languagesKnownRepository;
 
+    private static final List<String> SUPPORTED_FILE_TYPES = List.of(".pdf",".jpg",".jpeg",".png");
 
-    public HpSmcDetailTO fetchSmcRegistrationDetail(Integer councilId, String registrationNumber) throws NmrException {
+
+    public HpSmcDetailTO fetchSmcRegistrationDetail(Integer councilId, String registrationNumber) throws NmrException, NoDataFoundException {
         HpSmcDetailTO hpSmcDetailTO = new HpSmcDetailTO();
 
-        Tuple hpProfile = iHpProfileRepository.fetchSmcRegistrationDetail(registrationNumber, councilId);
-        if (hpProfile != null) {
-            if (hpProfile.get(USER_ID_COLUMN, BigInteger.class) != null) {
-                throw new NmrException(USER_ALREADY_EXISTS_EXCEPTION, HttpStatus.BAD_REQUEST);
-            }
-            /*else {
-                String primaryContactNo = hpProfile.get(PRIMARY_CONTACT_NO_COLUMN, String.class);
-                if(primaryContactNo != null && iUserRepository.findFirstByMobileNumber(primaryContactNo) != null){
-                    throw new NmrException(USER_ALREADY_EXISTS_EXCEPTION, HttpStatus.BAD_REQUEST);
-                }
-                String email = hpProfile.get(EMAIL_ID_COLUMN, String.class);
-                if(email != null && iUserRepository.findFirstByEmail(email) != null){
-                    throw new NmrException(USER_ALREADY_EXISTS_EXCEPTION, HttpStatus.BAD_REQUEST);
-                }
-            }*/
+        StateMedicalCouncil stateMedicalCouncil =
+                stateMedicalCouncilRepository.findStateMedicalCouncilById(BigInteger.valueOf(councilId));
 
-            hpSmcDetailTO.setHpName(hpProfile.get(FULL_NAME_COLUMN, String.class));
-            hpSmcDetailTO.setCouncilName(hpProfile.get(NAME_COLUMN, String.class));
-            hpSmcDetailTO.setRegistrationNumber(hpProfile.get(REGISTRATION_NO_COLUMN, String.class));
-            hpSmcDetailTO.setHpProfileId(hpProfile.get(HP_PROFILE_ID_COLUMN, BigInteger.class));
-            hpSmcDetailTO.setEmailId(hpProfile.get(EMAIL_ID_COLUMN, String.class));
-        } else {
-            throw new NoDataFoundException(NO_DATA_FOUND);
+        String councilName = stateMedicalCouncil.getName();
+        List<Council> councils = councilService.getCouncilByRegistrationNumberAndCouncilName(registrationNumber, councilName);
+
+        if(councils.isEmpty()){
+            throw new NoDataFoundException();
         }
+        Council council = councils.get(0);
+
+        hpSmcDetailTO.setHpName(council.getFullName());
+        hpSmcDetailTO.setCouncilName(council.getRegistrationsDetails().get(0).getCouncilName());
+        hpSmcDetailTO.setRegistrationNumber(council.getRegistrationsDetails().get(0).getRegistrationNo());
+        hpSmcDetailTO.setEmailId(council.getEmail());
         return hpSmcDetailTO;
+
     }
 
     @Override
@@ -156,14 +159,12 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         BigInteger updatedHpProfileId = null;
         if (existingHpProfile == null || HpProfileStatus.APPROVED.getId().equals(existingHpProfile.getHpProfileStatus().getId())) {
             log.debug("Initiating HP Profile Insertion flow since there are no existing HP Profiles with this hp_profile_id or The existing HP Profile is now Approved");
-            String registrationId = null;
             if (existingHpProfile != null) {
                 log.debug("There was an existing HP Profile with the given hp_profile_id which has been Approved. ");
                 HpProfile latestHpProfile = iHpProfileRepository.findLatestHpProfileByRegistrationId(existingHpProfile.getRegistrationId());
                 if (HpProfileStatus.PENDING.getId().equals(latestHpProfile.getHpProfileStatus().getId())) {
-                    throw new InvalidRequestException("Please use the latest ongoing HP Profile id for updation.");
+                    throw new InvalidRequestException(NMRError.USE_LATEST_HP_ID.getCode(), NMRError.USE_LATEST_HP_ID.getMessage());
                 }
-                registrationId = existingHpProfile.getRegistrationId();
             }
 
             targetedHpProfile = new HpProfile();
@@ -181,7 +182,7 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
             mapHpPersonalRequestToEntity(hpPersonalUpdateRequestTO, existingHpProfile);
             updatedHpProfileId = existingHpProfile.getId();
         }
-        if (hpPersonalUpdateRequestTO.getCommunicationAddress() != null && copiedExistingHpProfile!=null) {
+        if (hpPersonalUpdateRequestTO.getCommunicationAddress() != null && copiedExistingHpProfile != null) {
             Address address = NMRUtil.coalesce(iAddressRepository.getCommunicationAddressByHpProfileId(copiedExistingHpProfile.getId(), in.gov.abdm.nmr.enums.AddressType.COMMUNICATION.getId()), new Address());
             Address newAddress = new Address();
             org.springframework.beans.BeanUtils.copyProperties(address, newAddress);
@@ -210,37 +211,6 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
                 newKycAddress.setHpProfileId(updatedHpProfileId);
                 iAddressRepository.save(newKycAddress);
             }
-
-            List<QualificationDetails> qualificationDetails = new ArrayList<>();
-            List<QualificationDetails> qualificationDetailsList = iQualificationDetailRepository.getQualificationDetailsByHpProfileId(copiedExistingHpProfile.getId());
-            for (QualificationDetails qualificationDetail : qualificationDetailsList) {
-                QualificationDetails newQualificationDetails = new QualificationDetails();
-                org.springframework.beans.BeanUtils.copyProperties(qualificationDetail, newQualificationDetails);
-                newQualificationDetails.setId(null);
-                newQualificationDetails.setHpProfile(targetedHpProfile);
-                qualificationDetails.add(newQualificationDetails);
-            }
-            iQualificationDetailRepository.saveAll(qualificationDetails);
-
-            List<ForeignQualificationDetails> customQualificationDetailsList = new ArrayList<>();
-            List<ForeignQualificationDetails> customQualificationDetails = iForeignQualificationDetailRepository.getQualificationDetailsByHpProfileId(copiedExistingHpProfile.getId());
-            for (ForeignQualificationDetails customQualificationDetail : customQualificationDetails) {
-                ForeignQualificationDetails newCustomQualificationDetails = new ForeignQualificationDetails();
-                org.springframework.beans.BeanUtils.copyProperties(customQualificationDetail, newCustomQualificationDetails);
-                newCustomQualificationDetails.setId(null);
-                newCustomQualificationDetails.setHpProfile(targetedHpProfile);
-                customQualificationDetailsList.add(newCustomQualificationDetails);
-            }
-            iForeignQualificationDetailRepository.saveAll(customQualificationDetailsList);
-
-            HpNbeDetails hpNbeDetails = hpNbeDetailsRepository.findByHpProfileId(copiedExistingHpProfile.getId());
-            if (hpNbeDetails != null) {
-                log.debug("Setting NBE Details");
-                HpNbeDetails newHpNbeDetails = new HpNbeDetails();
-                org.springframework.beans.BeanUtils.copyProperties(hpNbeDetails, newHpNbeDetails);
-                newHpNbeDetails.setId(null);
-                newHpNbeDetails.setHpProfileId(targetedHpProfile.getId());
-            }
         }
         log.info("HpProfileDaoServiceImpl : updateHpPersonalDetails method : Execution Successful. ");
         return new HpProfileUpdateResponseTO(204, "Record Added/Updated Successfully!", updatedHpProfileId);
@@ -258,27 +228,23 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         }
         RegistrationDetails registrationDetail = registrationDetailRepository.getRegistrationDetailsByHpProfileId(hpProfileId);
 
-        HpProfile hpProfile = iHpProfileRepository.findById(hpProfileId).orElse(null);
+        HpProfile hpProfile = iHpProfileRepository.findById(hpProfileId).orElseThrow(InvalidRequestException::new);
 
         if (registrationDetail == null) {
             log.debug("Initiating Registration details Insertion flow since there were no matching Registration details found for the given hp_profile_id. ");
             registrationDetail = new RegistrationDetails();
-            mapRegistrationRequestToEntity(hpRegistrationUpdateRequestTO, registrationDetail, hpProfile,registrationCertificate);
+            mapRegistrationRequestToEntity(hpRegistrationUpdateRequestTO, registrationDetail, hpProfile, registrationCertificate);
             registrationDetailRepository.save(registrationDetail);
         } else {
             log.debug("Initiating Registration details Updation flow since there was an existing Registration detail for the given hp_profile_id. ");
-            mapRegistrationRequestToEntity(hpRegistrationUpdateRequestTO, registrationDetail, hpProfile,registrationCertificate);
+            mapRegistrationRequestToEntity(hpRegistrationUpdateRequestTO, registrationDetail, hpProfile, registrationCertificate);
         }
-        if (degreeCertificate != null) {
-            log.debug("Validating Degree Certificates against the List of Qualifications accepted as payload");
-            validateQualificationDetailsAndProofs(hpRegistrationUpdateRequestTO.getQualificationDetails(), List.of(degreeCertificate));
-            saveQualificationDetails(hpProfile, registrationDetail, hpRegistrationUpdateRequestTO.getQualificationDetails(), List.of(degreeCertificate));
-        } else {
-            validateQualificationDetailsAndProofs(hpRegistrationUpdateRequestTO.getQualificationDetails(), new ArrayList<>());
-            saveQualificationDetails(hpProfile, registrationDetail, hpRegistrationUpdateRequestTO.getQualificationDetails(), new ArrayList<>());
+        if (hpRegistrationUpdateRequestTO.getQualificationDetails() != null && !hpRegistrationUpdateRequestTO.getQualificationDetails().isEmpty()) {
+            log.debug("Saving Qualification Details");
+            saveQualificationDetails(hpProfile, registrationDetail, hpRegistrationUpdateRequestTO.getQualificationDetails(), degreeCertificate != null ? List.of(degreeCertificate) : Collections.emptyList());
         }
 
-        HpNbeDetails hpNbeDetails = hpNbeDetailsRepository.findByHpProfileId(hpProfileId);
+        HpNbeDetails hpNbeDetails = hpNbeDetailsRepository.findByUserId(hpProfile.getUser().getId());
         if (hpNbeDetails == null) {
             log.debug("Initiating NBE details Insertion flow since there were no matching NBE details found for the given hp_profile_id. ");
             hpNbeDetails = new HpNbeDetails();
@@ -293,7 +259,6 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         iHpProfileRepository.save(hpProfile);
 
 
-
         log.info("HpProfileDaoServiceImpl : updateHpRegistrationDetails method : Execution Successful. ");
 
         return new HpProfileUpdateResponseTO(204,
@@ -302,11 +267,11 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
 
     @Override
     public HpProfileUpdateResponseTO updateWorkProfileDetails(BigInteger hpProfileId,
-                                                              HpWorkProfileUpdateRequestTO hpWorkProfileUpdateRequestTO, List<MultipartFile> proofs) throws InvalidRequestException, NmrException {
+                                                              HpWorkProfileUpdateRequestTO hpWorkProfileUpdateRequestTO, List<MultipartFile> proofs) throws InvalidRequestException, NmrException, NotFoundException {
 
         log.info("In HpProfileDaoServiceImpl : updateWorkProfileDetails method");
 
-        if (proofs != null) {
+        if (proofs != null && proofs.size() > 1) {
             log.debug("Initiating Addition of Proofs since Proofs are provided as a part of input payload. ");
             validateWorkProfileDetailsAndProofs(hpWorkProfileUpdateRequestTO.getCurrentWorkDetails(), proofs);
 
@@ -324,16 +289,16 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         List<WorkProfile> workProfile = new ArrayList<>();
         BigInteger userId = null;
         Optional<HpProfile> hpProfileOptional = iHpProfileRepository.findById(hpProfileId);
-        if(hpProfileOptional.isPresent()) {
+        if (hpProfileOptional.isPresent()) {
             User user = hpProfileOptional.get().getUser();
             if (user != null) {
                 userId = user.getId();
                 workProfile = workProfileRepository.getWorkProfileDetailsByUserId(userId);
             } else {
-                throw new NmrException(NO_MATCHING_USER_DETAILS_FOUND,HttpStatus.BAD_REQUEST);
+                throw new NotFoundException(NMRError.NO_MATCHING_USER_DETAILS_FOUND.getCode(), NMRError.NO_MATCHING_USER_DETAILS_FOUND.getMessage());
             }
         }
-        if (workProfile.size() == 0) {
+        if (workProfile.isEmpty()) {
             log.debug("Initiation of Work Profile Insertion flow for Work Profile details since there are no matching Work Profiles found for the provided hp_profile_id");
             workProfile = new ArrayList<>();
             mapWorkRequestToEntity(hpWorkProfileUpdateRequestTO, workProfile, hpProfileId, userId);
@@ -342,27 +307,7 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
             mapWorkRequestToEntity(hpWorkProfileUpdateRequestTO, workProfile, hpProfileId, userId);
         }
 
-        List<BigInteger> languagesKnownIds = hpWorkProfileUpdateRequestTO.getLanguagesKnownIds();
-        if( languagesKnownIds!= null && !languagesKnownIds.isEmpty()) {
-            List<LanguagesKnown> languagesKnownEarlierList = languagesKnownRepository.findByUserId(userId);
-            List<BigInteger> languagesKnownEarlierIds = new ArrayList<>();
-            if(languagesKnownEarlierList !=null && !languagesKnownEarlierList.isEmpty()){
-                languagesKnownEarlierList.forEach(languagesKnownEarlier -> {
-                    languagesKnownEarlierIds.add(languagesKnownEarlier.getId());
-                });
-            }
-            List<LanguagesKnown> languagesKnownLater = new ArrayList<>();
-            BigInteger tempUserId = userId;
-            languagesKnownIds.stream()
-                    .filter(languagesKnownId-> !languagesKnownEarlierIds.contains(languagesKnownId))
-                    .forEach(languagesKnownId->{
-                        LanguagesKnown languagesKnown = new LanguagesKnown();
-                        languagesKnown.setLanguage(entityManager.getReference(Language.class,languagesKnownId));
-                        languagesKnown.setUser(entityManager.getReference(User.class,tempUserId));
-                        languagesKnownLater.add(languagesKnown);
-                    });
-            languagesKnownRepository.saveAll(languagesKnownLater);
-        }
+        saveKnownLanguages(hpWorkProfileUpdateRequestTO, userId);
 
         log.info("HpProfileDaoServiceImpl : updateWorkProfileDetails method : Execution Successful. ");
 
@@ -370,9 +315,34 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
                 "Registration Added/Updated Successfully!!", hpProfileId);
     }
 
+    private void saveKnownLanguages(HpWorkProfileUpdateRequestTO hpWorkProfileUpdateRequestTO, BigInteger userId) {
+        List<BigInteger> languagesKnownIds = hpWorkProfileUpdateRequestTO.getLanguagesKnownIds();
+        if (languagesKnownIds != null && !languagesKnownIds.isEmpty()) {
+            List<LanguagesKnown> languagesKnownEarlierList = languagesKnownRepository.findByUserId(userId);
+            List<BigInteger> languagesKnownEarlierIds = new ArrayList<>();
+            if (languagesKnownEarlierList != null && !languagesKnownEarlierList.isEmpty()) {
+                languagesKnownEarlierList.forEach(languagesKnownEarlier ->
+                        languagesKnownEarlierIds.add(languagesKnownEarlier.getId())
+                );
+            }
+            List<LanguagesKnown> languagesKnownLater = new ArrayList<>();
+            BigInteger tempUserId = userId;
+            languagesKnownIds.removeAll( languagesKnownEarlierIds );
+            if(!languagesKnownIds.isEmpty()) {
+                languagesKnownIds.forEach(languagesKnown -> {
+                    LanguagesKnown languagesKnownObject = new LanguagesKnown();
+                    languagesKnownObject.setLanguage(entityManager.getReference(Language.class, languagesKnown));
+                    languagesKnownObject.setUser(entityManager.getReference(User.class, tempUserId));
+                    languagesKnownLater.add(languagesKnownObject);
+                });
+            }
+            languagesKnownRepository.saveAll(languagesKnownLater);
+        }
+    }
+
 
     @Override
-    public void saveQualificationDetails(HpProfile hpProfile, RegistrationDetails newRegistrationDetails, List<QualificationDetailRequestTO> qualificationDetailRequestTOS, List<MultipartFile> proofs) {
+    public void saveQualificationDetails(HpProfile hpProfile, RegistrationDetails newRegistrationDetails, List<QualificationDetailRequestTO> qualificationDetailRequestTOS, List<MultipartFile> proofs) throws InvalidRequestException {
         if (qualificationDetailRequestTOS != null) {
             saveIndianQualificationDetails(hpProfile, newRegistrationDetails, qualificationDetailRequestTOS.stream().filter(qualificationDetailRequestTO -> NMRConstants.INDIA.equals(qualificationDetailRequestTO.getQualificationFrom())).toList(), proofs);
             saveInternationalQualificationDetails(hpProfile, newRegistrationDetails, qualificationDetailRequestTOS.stream().filter(qualificationDetailRequestTO -> NMRConstants.INTERNATIONAL.equals(qualificationDetailRequestTO.getQualificationFrom())).toList(), proofs);
@@ -387,33 +357,39 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
 
     @Override
     public HpProfilePictureResponseTO uploadHpProfilePhoto(MultipartFile file, BigInteger hpProfileId)
-            throws IOException {
+            throws IOException, InvalidRequestException {
 
         HpProfile hpProfile = iHpProfileRepository.findById(hpProfileId).orElse(null);
         if (hpProfile == null) {
-            throw new InvalidRequestException("Invalid Request!!");
+            throw new InvalidRequestException(NMRError.INVALID_REQUEST.getCode(), NMRError.INVALID_REQUEST.getMessage());
         }
-        String originalHpProfilePhoto = file.getOriginalFilename();
 
-        if (originalHpProfilePhoto.toLowerCase().contains(".pdf")
-                || originalHpProfilePhoto.toLowerCase().contains(".jpg")
-                || originalHpProfilePhoto.toLowerCase().contains(".jpeg")
-                || originalHpProfilePhoto.toLowerCase().contains(".png")) {
-        } else {
+        if(file.getOriginalFilename() != null && !SUPPORTED_FILE_TYPES.contains(file.getOriginalFilename().toLowerCase())){
             throw new InvalidRequestException(file.getOriginalFilename() + " is not a allowed file type !!");
         }
+        String encodedPhoto = Base64.getEncoder().encodeToString(file.getBytes());
 
-        hpProfile.setProfilePhoto(file != null ? Base64.getEncoder().encodeToString(file.getBytes()) : null);
+      /*  Map<String, String> form = new HashMap<>();
+
+        form.put("grant_type", "client_credentials");
+
+        byte[] encodedBytes = Base64Utils.encode((imageApiUsername + ":" + imageApiPassword).getBytes());
+
+        String authHeader = "Basic " + new String(encodedBytes);
+
+        ImageTokenTo imageTokenTo=imageFClient.getToken(authHeader,form);
+
+        ProfileImageCompareTo imageCompareTo=new ProfileImageCompareTo(hpProfile.getProfilePhoto(),encodedPhoto);
+
+        imageFClient.compareImages(imageCompareTo,"Bearer "+imageTokenTo.getAccessToken()));
+
+        if condition here
+        */
+
+        hpProfile.setProfilePhoto(encodedPhoto);
         hpProfile.setPicName(file.getOriginalFilename());
         HpProfile insertedData = iHpProfileRepository.save(hpProfile);
         HpProfilePictureResponseTO hpProfilePictureResponseTO = new HpProfilePictureResponseTO();
-
-        if (insertedData == null) {
-            hpProfilePictureResponseTO.setMessage("Success");
-            hpProfilePictureResponseTO.setStatus(200);
-            return hpProfilePictureResponseTO;
-        }
-
         hpProfilePictureResponseTO.setProfilePicture(insertedData.getProfilePhoto());
         hpProfilePictureResponseTO.setPicName(insertedData.getPicName());
         hpProfilePictureResponseTO.setMessage("Success");
@@ -427,69 +403,17 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         return iHpProfileRepository.findById(id).orElse(null);
     }
 
-    @Override
-    public ResponseMessageTo setHpProfilePhotoAndAddressThroughAadhaar(BigInteger id, AadhaarUserKycTo userKycTo) {
-
-        String addressLine = checkIsNullAndAddSeparator(userKycTo.getHouse())
-                + checkIsNullAndAddSeparator(userKycTo.getStreet())
-                + checkIsNullAndAddSeparator(userKycTo.getLandmark())
-                + checkIsNullAndAddSeparator(userKycTo.getVillageTownCity())
-                + checkIsNullAndAddSeparator(userKycTo.getLocality())
-                + checkIsNullAndAddSeparator(userKycTo.getPincode())
-                + checkIsNullAndAddSeparator(userKycTo.getPostOffice());
-        try {
-            HpProfile hpProfile = iHpProfileRepository.findHpProfileById(id);
-            hpProfile.setProfilePhoto(userKycTo.getPhoto());
-            iHpProfileRepository.save(hpProfile);
-
-            Address address = iAddressRepository.getCommunicationAddressByHpProfileId(id,
-                    NMRConstants.DEFAULT_ADDRESS_TYPE_AADHAR);
-            address.setAddressLine1(addressLine);
-
-            Villages village = villagesRepository.findByName(userKycTo.getVillageTownCity());
-            if (village != null) {
-                address.setVillage(village);
-            }
-
-            SubDistrict subDistrict = subDistrictRepository.findByName(userKycTo.getSubDist());
-            if (subDistrict != null) {
-                address.setSubDistrict(subDistrict);
-            }
-            District district = districtRepository.findByName(userKycTo.getDistrict());
-            if (district != null) {
-                address.setDistrict(district);
-            }
-            State state = stateRepository.findByName(userKycTo.getState());
-            if (state != null) {
-                address.setState(state);
-            }
-
-            Country country = countryRepository.findByName(NMRConstants.DEFAULT_COUNTRY_AADHAR);
-            if (country != null) {
-                address.setCountry(country);
-            }
-
-            address.setPincode(userKycTo.getPincode());
-            address.setEmail(userKycTo.getEmail());
-            address.setMobile(userKycTo.getPhone());
-            iAddressRepository.save(address);
-        } catch (Exception e) {
-            return new ResponseMessageTo(NMRConstants.FAILURE_RESPONSE);
-        }
-        return new ResponseMessageTo(NMRConstants.SUCCESS_RESPONSE);
-    }
-
     private void saveIndianQualificationDetails(HpProfile hpProfile, RegistrationDetails newRegistrationDetails,
-                                                List<QualificationDetailRequestTO> qualificationDetailRequestTOS, List<MultipartFile> proofs) {
+                                                List<QualificationDetailRequestTO> qualificationDetailRequestTOS, List<MultipartFile> proofs) throws InvalidRequestException {
 
         List<QualificationDetails> qualificationDetails = new ArrayList<>();
         for (QualificationDetailRequestTO indianQualification : qualificationDetailRequestTOS) {
             QualificationDetails qualification = new QualificationDetails();
             if (indianQualification.getId() != null) {
-                qualification = qualificationDetailRepository.findById(indianQualification.getId()).get();
-                mapIndianQualificationRequestToEntity(hpProfile, newRegistrationDetails, indianQualification, qualification, proofs.get(qualificationDetailRequestTOS.indexOf(indianQualification)));
+                qualification = qualificationDetailRepository.findById(indianQualification.getId()).orElseThrow(InvalidRequestException::new);
+                mapIndianQualificationRequestToEntity(hpProfile, newRegistrationDetails, indianQualification, qualification, !proofs.isEmpty() ? proofs.get(qualificationDetailRequestTOS.indexOf(indianQualification)) : null);
             } else {
-                mapIndianQualificationRequestToEntity(hpProfile, newRegistrationDetails, indianQualification, qualification, proofs.get(qualificationDetailRequestTOS.indexOf(indianQualification)));
+                mapIndianQualificationRequestToEntity(hpProfile, newRegistrationDetails, indianQualification, qualification, !proofs.isEmpty() ? proofs.get(qualificationDetailRequestTOS.indexOf(indianQualification)) : null);
                 qualificationDetails.add(qualification);
             }
         }
@@ -497,12 +421,13 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
 
     }
 
-    private void mapIndianQualificationRequestToEntity(HpProfile hpProfile, RegistrationDetails newRegistrationDetails, QualificationDetailRequestTO indianQualification, QualificationDetails qualification, MultipartFile proof) {
-        qualification.setCountry(countryRepository.findById(indianQualification.getCountry().getId()).get());
-        qualification.setState(stateRepository.findById(indianQualification.getState().getId()).get());
+    private void mapIndianQualificationRequestToEntity(HpProfile hpProfile, RegistrationDetails newRegistrationDetails, QualificationDetailRequestTO indianQualification, QualificationDetails qualification, MultipartFile proof) throws InvalidRequestException {
+
+        qualification.setCountry(countryRepository.findById(indianQualification.getCountry().getId()).orElseThrow(InvalidRequestException::new));
+        qualification.setState(stateRepository.findById(indianQualification.getState().getId()).orElseThrow(InvalidRequestException::new));
         qualification.setCollege(collegeMasterRepository.findCollegeMasterById(indianQualification.getCollege().getId()));
         qualification.setUniversity(universityMasterRepository.findUniversityMasterById(indianQualification.getUniversity().getId()));
-        qualification.setCourse(courseRepository.findById(indianQualification.getCourse().getId()).get());
+        qualification.setCourse(courseRepository.findById(indianQualification.getCourse().getId()).orElseThrow(InvalidRequestException::new));
         qualification.setIsVerified(indianQualification.getIsVerified());
         qualification.setQualificationYear(indianQualification.getQualificationYear());
         qualification.setQualificationMonth(indianQualification.getQualificationMonth());
@@ -513,37 +438,42 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
                 coalesce(indianQualification.getRequestId(), hpProfile.getRequestId()));
         qualification.setBroadSpecialityId(indianQualification.getBroadSpecialityId());
         qualification.setSuperSpecialityName(indianQualification.getSuperSpecialityName());
-        qualification.setFileName(proof != null ? proof.getOriginalFilename() : null);
-        try {
-            qualification.setCertificate(proof.getBytes());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        qualification.setUser(hpProfile.getUser());
+        if (proof != null && !proof.isEmpty()) {
+            qualification.setFileName(proof.getOriginalFilename());
+            try {
+                qualification.setCertificate(proof.getBytes());
+            } catch (IOException e) {
+                throw new InvalidRequestException();
+            }
         }
     }
 
 
     private void saveInternationalQualificationDetails(HpProfile hpProfile, RegistrationDetails newRegistrationDetails,
-                                                       List<QualificationDetailRequestTO> qualificationDetailRequestTOS, List<MultipartFile> proofs) {
+                                                       List<QualificationDetailRequestTO> qualificationDetailRequestTOS, List<MultipartFile> proofs) throws InvalidRequestException {
         List<ForeignQualificationDetails> internationQualifications = new ArrayList<>();
         for (QualificationDetailRequestTO internationalQualification : qualificationDetailRequestTOS) {
             ForeignQualificationDetails customQualification = new ForeignQualificationDetails();
             if (internationalQualification.getId() != null) {
-                customQualification = iCustomQualificationDetailRepository.findById(internationalQualification.getId()).get();
-                mapQualificationRequestToEntity(hpProfile, newRegistrationDetails, internationalQualification, customQualification, proofs.get(qualificationDetailRequestTOS.indexOf(internationalQualification)));
+                customQualification = iCustomQualificationDetailRepository.findById(internationalQualification.getId()).orElseThrow(InvalidRequestException::new);
+                mapQualificationRequestToEntity(hpProfile, newRegistrationDetails, internationalQualification, customQualification, !proofs.isEmpty() ? proofs.get(qualificationDetailRequestTOS.indexOf(internationalQualification)) : null);
             } else {
-                mapQualificationRequestToEntity(hpProfile, newRegistrationDetails, internationalQualification, customQualification, proofs.get(qualificationDetailRequestTOS.indexOf(internationalQualification)));
+                mapQualificationRequestToEntity(hpProfile, newRegistrationDetails, internationalQualification, customQualification, !proofs.isEmpty() ? proofs.get(qualificationDetailRequestTOS.indexOf(internationalQualification)) : null);
                 internationQualifications.add(customQualification);
             }
         }
         iCustomQualificationDetailRepository.saveAll(internationQualifications);
     }
 
-    private void mapQualificationRequestToEntity(HpProfile hpProfile, RegistrationDetails newRegistrationDetails, QualificationDetailRequestTO newCustomQualification, ForeignQualificationDetails customQualification, MultipartFile proof) {
+    private void mapQualificationRequestToEntity(HpProfile hpProfile, RegistrationDetails newRegistrationDetails, QualificationDetailRequestTO newCustomQualification, ForeignQualificationDetails customQualification, MultipartFile proof) throws InvalidRequestException {
         customQualification.setCountry(newCustomQualification.getCountry().getName());
         customQualification.setState(newCustomQualification.getState() != null ? newCustomQualification.getState().getName() : null);
         customQualification.setCollege(newCustomQualification.getCollege().getName());
         customQualification.setUniversity(newCustomQualification.getUniversity() != null ? newCustomQualification.getUniversity().getName() : null);
-        customQualification.setCourse(newCustomQualification.getCourse().getCourseName());
+        //GK - 08-04-2023 - FE payload for additional qualification is coming as name, it needs to be corrected. Either courseName or name can rename in dto
+        String courseName = newCustomQualification.getCourse().getCourseName();
+        customQualification.setCourse(courseName != null ? courseName : newCustomQualification.getCourse().getName());
         customQualification.setIsVerified(newCustomQualification.getIsVerified());
         customQualification.setQualificationYear(newCustomQualification.getQualificationYear());
         customQualification.setQualificationMonth(newCustomQualification.getQualificationMonth());
@@ -554,19 +484,22 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         customQualification.setHpProfile(hpProfile);
         customQualification.setBroadSpecialityId(newCustomQualification.getBroadSpecialityId());
         customQualification.setSuperSpecialityName(newCustomQualification.getSuperSpecialityName());
-        customQualification.setFileName(proof != null ? proof.getOriginalFilename() : null);
-        try {
-            customQualification.setCertificate(proof.getBytes());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        customQualification.setUser(hpProfile.getUser());
+        if (proof != null && !proof.isEmpty()) {
+            customQualification.setFileName(proof.getOriginalFilename());
+            try {
+                customQualification.setCertificate(proof.getBytes());
+            } catch (IOException e) {
+                throw new InvalidRequestException();
+            }
         }
     }
 
     private void mapAddressRequestToEntity(BigInteger hpProfileId, HpPersonalUpdateRequestTO hpPersonalUpdateRequestTO, Address addressData) {
         addressData.setAddressLine1(hpPersonalUpdateRequestTO.getCommunicationAddress().getAddressLine1());
         addressData.setPincode(hpPersonalUpdateRequestTO.getCommunicationAddress().getPincode());
-        addressData.setEmail(hpPersonalUpdateRequestTO.getCommunicationAddress().getEmail());
-        addressData.setMobile(hpPersonalUpdateRequestTO.getCommunicationAddress().getMobile());
+        addressData.setEmail(hpPersonalUpdateRequestTO.getPersonalDetails().getEmail());
+        addressData.setMobile(hpPersonalUpdateRequestTO.getPersonalDetails().getMobile());
 
         Country communicationCountry = countryRepository
                 .findById(hpPersonalUpdateRequestTO.getCommunicationAddress().getCountry().getId())
@@ -618,13 +551,11 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         hpProfile.setSpouseName(hpPersonalUpdateRequestTO.getPersonalDetails().getSpouseName());
         hpProfile.setGender(hpPersonalUpdateRequestTO.getPersonalDetails().getGender());
         hpProfile.setDateOfBirth(hpPersonalUpdateRequestTO.getPersonalDetails().getDateOfBirth());
-        hpProfile.setRequestId(hpPersonalUpdateRequestTO.getRequestId());
+        if (hpPersonalUpdateRequestTO.getRequestId() != null) {
+            hpProfile.setRequestId(hpPersonalUpdateRequestTO.getRequestId());
+        }
         hpProfile.setHpProfileStatus(in.gov.abdm.nmr.entity.HpProfileStatus.builder().id(HpProfileStatus.PENDING.getId()).build());
         hpProfile.setIsSameAddress(hpPersonalUpdateRequestTO.getCommunicationAddress().getIsSameAddress());
-//        Schedule schedule = iScheduleRepository
-//                .findById(hpPersonalUpdateRequestTO.getPersonalDetails().getSchedule().getId()).orElse(null);
-//        hpProfile.setSchedule(schedule);
-
         Country countryNationality = countryRepository
                 .findById(hpPersonalUpdateRequestTO.getPersonalDetails().getCountryNationality().getId())
                 .orElse(null);
@@ -641,28 +572,31 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
             hpNbeDetails.setUserResult(hpRegistrationUpdateRequestTO.getHpNbeDetails().getUserResult());
             hpNbeDetails.setYearOfPassing(hpRegistrationUpdateRequestTO.getHpNbeDetails().getYearOfPassing());
             hpNbeDetails.setUpdatedAt(Timestamp.valueOf(LocalDateTime.now()));
-            hpNbeDetails.setHpProfileId(hpProfile.getId());
+            hpNbeDetails.setHpProfile(hpProfile);
+            hpNbeDetails.setUser(hpProfile.getUser());
             hpNbeDetails.setPassportNumber(hpRegistrationUpdateRequestTO.getHpNbeDetails().getPassportNumber());
         }
     }
 
     @SneakyThrows
-    private void mapRegistrationRequestToEntity(HpRegistrationUpdateRequestTO hpRegistrationUpdateRequestTO, RegistrationDetails registrationDetail, HpProfile hpProfile,MultipartFile registrationCertificate) {
+    private void mapRegistrationRequestToEntity(HpRegistrationUpdateRequestTO hpRegistrationUpdateRequestTO, RegistrationDetails registrationDetail, HpProfile hpProfile, MultipartFile registrationCertificate) {
         log.debug("In HpProfileDaoServiceImpl : mapRegistrationRequestToEntity method");
         if (hpRegistrationUpdateRequestTO.getRegistrationDetail() != null) {
             registrationDetail.setHpProfileId(hpProfile);
             registrationDetail.setRegistrationDate(hpRegistrationUpdateRequestTO.getRegistrationDetail().getRegistrationDate());
             registrationDetail.setRegistrationNo(hpRegistrationUpdateRequestTO.getRegistrationDetail().getRegistrationNumber());
             registrationDetail.setStateMedicalCouncil(iStateMedicalCouncilRepository
-                    .findById(hpRegistrationUpdateRequestTO.getRegistrationDetail().getStateMedicalCouncil().getId()).get());
+                    .findById(hpRegistrationUpdateRequestTO.getRegistrationDetail().getStateMedicalCouncil().getId()).orElseThrow(InvalidRequestException::new));
             String isRenewable = hpRegistrationUpdateRequestTO.getRegistrationDetail().getIsRenewable();
             registrationDetail.setIsRenewable(isRenewable);
-            if(NMRConstants.RENEWABLE_REGISTRATION_CODE.equalsIgnoreCase(isRenewable)) {
+            if (NMRConstants.RENEWABLE_REGISTRATION_CODE.equalsIgnoreCase(isRenewable)) {
                 registrationDetail.setRenewableRegistrationDate(hpRegistrationUpdateRequestTO.getRegistrationDetail().getRenewableRegistrationDate());
             }
             registrationDetail.setIsNameChange(hpRegistrationUpdateRequestTO.getRegistrationDetail().getIsNameChange());
-            registrationDetail.setCertificate(registrationCertificate.getBytes());
-            registrationDetail.setFileName(hpRegistrationUpdateRequestTO.getRegistrationDetail().getFileName());
+            if (registrationCertificate != null && !registrationCertificate.isEmpty()) {
+                registrationDetail.setCertificate(registrationCertificate.getBytes());
+                registrationDetail.setFileName(hpRegistrationUpdateRequestTO.getRegistrationDetail().getFileName());
+            }
         }
         registrationDetail.setHpProfileId(hpProfile);
         registrationDetail.setCreatedAt(Timestamp.valueOf(LocalDateTime.now()));
@@ -691,26 +625,29 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
                 addWorkProfile.setWorkStatus(workStatusRepository.findById(hpWorkProfileUpdateRequestTO.getWorkDetails().getWorkStatus().getId()).get());
             }
             addWorkProfile.setIsUserCurrentlyWorking(hpWorkProfileUpdateRequestTO.getWorkDetails().getIsUserCurrentlyWorking());
-            hpWorkProfileUpdateRequestTO.getCurrentWorkDetails().stream().filter(currentWorkDetails -> addWorkProfile.getFacilityId() == currentWorkDetails.getFacilityId()).forEach(currentWorkDetailsTO -> {
-                addWorkProfile.setFacilityId(currentWorkDetailsTO.getFacilityId());
-                addWorkProfile.setFacilityTypeId(currentWorkDetailsTO.getFacilityTypeId());
-                addWorkProfile.setUrl(currentWorkDetailsTO.getUrl());
-                addWorkProfile
-                        .setWorkOrganization(currentWorkDetailsTO.getWorkOrganization());
-                addWorkProfile.setOrganizationType(currentWorkDetailsTO.getOrganizationType());
-                if (currentWorkDetailsTO.getAddress() != null) {
-                    addWorkProfile.setAddress(currentWorkDetailsTO.getAddress().getAddressLine1());
-                    addWorkProfile.setState(stateRepository.findById(currentWorkDetailsTO.getAddress().getState().getId()).get());
-                    addWorkProfile.setDistrict(districtRepository.findById(currentWorkDetailsTO.getAddress().getDistrict().getId()).get());
-                    addWorkProfile.setPincode(currentWorkDetailsTO.getAddress().getPincode());
+
+            hpWorkProfileUpdateRequestTO.getCurrentWorkDetails().forEach(currentWorkDetailsTO -> {
+                if (addWorkProfile.getFacilityId().equals(currentWorkDetailsTO.getFacilityId())) {
+                    addWorkProfile.setFacilityId(currentWorkDetailsTO.getFacilityId());
+                    addWorkProfile.setFacilityTypeId(currentWorkDetailsTO.getFacilityTypeId());
+                    addWorkProfile.setUrl(currentWorkDetailsTO.getUrl());
+                    addWorkProfile
+                            .setWorkOrganization(currentWorkDetailsTO.getWorkOrganization());
+                    addWorkProfile.setOrganizationType(currentWorkDetailsTO.getOrganizationType());
+                    if (currentWorkDetailsTO.getAddress() != null) {
+                        addWorkProfile.setAddress(currentWorkDetailsTO.getAddress().getAddressLine1());
+                        addWorkProfile.setState(currentWorkDetailsTO.getAddress().getState().getId() != null ? stateRepository.findById(currentWorkDetailsTO.getAddress().getState().getId()).get() : null);
+                        addWorkProfile.setDistrict(currentWorkDetailsTO.getAddress().getDistrict().getId() != null ? districtRepository.findById(currentWorkDetailsTO.getAddress().getDistrict().getId()).get() : null);
+                        addWorkProfile.setPincode(currentWorkDetailsTO.getAddress().getPincode());
+                    }
+                    addWorkProfile.setProofOfWorkAttachment(currentWorkDetailsTO.getProof());
+                    addWorkProfile.setRegistrationNo(hpWorkProfileUpdateRequestTO.getRegistrationNo());
+                    addWorkProfile.setExperienceInYears(currentWorkDetailsTO.getExperienceInYears());
+                    workProfileDetailsList.add(addWorkProfile);
                 }
-                addWorkProfile.setProofOfWorkAttachment(currentWorkDetailsTO.getProof());
-                addWorkProfile.setRegistrationNo(hpWorkProfileUpdateRequestTO.getRegistrationNo());
-                addWorkProfile.setExperienceInYears(currentWorkDetailsTO.getExperienceInYears());
-                workProfileDetailsList.add(addWorkProfile);
             });
+            workProfileRepository.saveAll(workProfileDetailsList);
         });
-        workProfileRepository.saveAll(workProfileDetailsList);
     }
 
     private void saveWorkProfileRecords(HpWorkProfileUpdateRequestTO hpWorkProfileUpdateRequestTO, BigInteger hpProfileId, BigInteger userId) {
@@ -734,8 +671,8 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
             addWorkProfile.setOrganizationType(currentWorkDetailsTO.getOrganizationType());
             if (currentWorkDetailsTO.getAddress() != null) {
                 addWorkProfile.setAddress(currentWorkDetailsTO.getAddress().getAddressLine1());
-                addWorkProfile.setState(stateRepository.findById(currentWorkDetailsTO.getAddress().getState().getId()).get());
-                addWorkProfile.setDistrict(districtRepository.findById(currentWorkDetailsTO.getAddress().getDistrict().getId()).get());
+                addWorkProfile.setState(currentWorkDetailsTO.getAddress().getState().getId() != null ? stateRepository.findById(currentWorkDetailsTO.getAddress().getState().getId()).get() : null);
+                addWorkProfile.setDistrict(currentWorkDetailsTO.getAddress().getDistrict().getId() != null ? districtRepository.findById(currentWorkDetailsTO.getAddress().getDistrict().getId()).get() : null);
                 addWorkProfile.setPincode(currentWorkDetailsTO.getAddress().getPincode());
             }
             addWorkProfile.setProofOfWorkAttachment(currentWorkDetailsTO.getProof());
@@ -747,33 +684,5 @@ public class HpProfileDaoServiceImpl implements IHpProfileDaoService {
         workProfileRepository.saveAll(workProfileDetailsList);
     }
 
-    private String checkIsNullAndAddSeparator(String string) {
-        if (string == null) {
-            return "";
-        } else {
-            return string + ", ";
-        }
-    }
-
-    @SneakyThrows
-    private String multipartFileToBase64(MultipartFile file) {
-        return Base64.getEncoder().encodeToString(file.getBytes());
-    }
-
-    @SneakyThrows
-    HpRegistrationUpdateRequestTO getHpRegistrationUpdateRequestTO(String hpRegistrationUpdateRequestString) {
-        return objectMapper.readValue(hpRegistrationUpdateRequestString, HpRegistrationUpdateRequestTO.class);
-    }
-
-    @SneakyThrows
-    HpWorkProfileUpdateRequestTO getUpdateWorkProfileDetailsTo(String getUpdateWorkProfileDetailsString) {
-        return objectMapper.readValue(getUpdateWorkProfileDetailsString, HpWorkProfileUpdateRequestTO.class);
-    }
-
-
-    @SneakyThrows
-    public List<QualificationDetailRequestTO> getQualificationDetailRequestTO(String qualificationDetailRequestTOString) {
-        return Arrays.asList(objectMapper.readValue(qualificationDetailRequestTOString, QualificationDetailRequestTO[].class));
-    }
 
 }
